Add classnanes & validation

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -17,12 +17,13 @@
   margin-left: auto;
   width: 60%;
   margin-bottom: 10px;
+  outline: none;
 }
 
 .inputValid {
-  border: 1px solid green;
+  border: 3px solid green;
 }
 
 .inputInvalid {
-  border: 1px solid red;
+  border: 3px solid red;
 }
