--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,5 +1,8 @@
+@import './../../common/styles/flexTemplates';
+
 .formContainer {
-  display: flex;
+  // display: flex;
+  @extend %flex-container;
   flex-direction: column;
   max-width: 800px;
   margin: 0 auto;
